Warframe.market integration
Now supports basic prime part prices lookup (thanks to warframe.market's api). Usage: '!price <prime part> prime <set|blueprint|chassis|stock...>'.
Also better response when trying to post a message too large (>2000 chars), and more recognized attributes.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord.io": "github:woor/discord.io#gateway_v6",
     "npm": "^6.2.0",
     "warframe-items": "^1.28.0",
-    "winston": "^3.0.0"
+    "winston": "^3.0.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
